# LearningToAssemble

./: .gitignore  README.md  pyproject.toml
data/assembly/dome/: rbe_admm.json
data/assembly/mario/: 11.json  12.json  16.json  27.json  38.json  49.json  61.json  9.json  rbe_admm.json
data/assembly/rulin/: rbe_admm.json  rulin.mtl
data/assembly/tetris-3/: rbe_admm.json
script/: imgui.ini  test.py  train.py  train_rulin.py  train_tetris-1.py
script/models/: policy.pol
script/models/fexample/: policy.pol
script/models/frulin/: policy.pol
src/learn2assemble/: .polyscope.ini  RBE.py  __init__.py  agent.py  assembly.py  buffer.py  config_init.py  curriculum.py  disassemly_env.py  env.py  graph.py  imgui.ini  policy.py  ppo.py  rbe.py  render.py  simulator.py  stability.py  train.py  training.py
src/learn2assemble/models/: policy.pol
src/learn2assemble/ppo/: agent.py  buffer.py  env.py  init.py  policy.py  test.py  train.py
test/: test_assembly.py  test_curriculum.py  test_rbe.py  test_simulator.py  test_stability.py
